--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>s-pay</module>
         <module>s-pojo</module>
         <module>s-config</module>
+        <module>s-send</module>
     </modules>
 
     <parent>
