--- a/s-utils/pom.xml
+++ b/s-utils/pom.xml
@@ -33,13 +33,38 @@
             <scope>provided</scope>
         </dependency>
 
-
-
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>s-pojo</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>3.12.0</version>
         </dependency>
+
+        <!--七牛云-->
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>[7.4.0, 7.4.99]</version>
+        </dependency>
+        <!--        七牛云里的JAVA sdk-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.10.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
